--- a/index.html
+++ b/index.html
@@ -69,16 +69,56 @@
     </div>
     <div id="category" class="category">
       <div class="category-container">
-        <div class="category-title">Temukan Product Kebutuhan Anda</div>
+        <div class="title">Temukan Product Kebutuhan Anda</div>
         <div class="row">
           <div class="col">
-            <div class="img">
-              <img src="./assets/komputer.png" alt="" />
+            <div class="card-category">
+              <div class="category-img">
+                <img src="assets/komputer.png" alt="" />
+              </div>
+              <div class="category-title">komputer</div>
+              <div class="category-desk">
+                Menjual komputer beserta komponen dari berbagaai macam model,
+                merek dan jenis yang berbeda
+              </div>
             </div>
           </div>
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
+          <div class="col">
+            <div class="card-category">
+              <div class="category-img">
+                <img src="assets/laptop.png" alt="" />
+              </div>
+              <div class="category-title">laptop</div>
+              <div class="category-desk">
+                Tersedia Laptop dengan berbagai macam Merek , Tipe dan
+                Spesifikasi yang sesuai dengan kebutuhan anda
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card-category">
+              <div class="category-img">
+                <img src="assets/cctv.png" alt="" />
+              </div>
+              <div class="category-title">cctv dan running text</div>
+              <div class="category-desk">
+                Menyediakan CCTV, Running Text, Jadwal Shalat Digital, Videotron
+                dengan berbagai paket dan ukuran
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card-category">
+              <div class="category-img">
+                <img src="assets/more.png" alt="" />
+              </div>
+              <div class="category-title">perangkat lainnya</div>
+              <div class="category-desk">
+                Menjual berbagai macam aksesories komputer seperti printer,
+                scanner, speaker, perangkkat jaringan dan lainnya
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
